--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
     "start": "node server"
   },
   "dependencies": {
+    "async": "^0.9.0",
     "body-parser": "^1.12.0",
     "bookshelf": "^0.7.9",
     "config": "^1.12.0",
+    "ejs": "^2.3.1",
     "express": "^4.12.2",
     "http": "0.0.0",
     "knex": "^0.7.6",
     "mysql": "^2.5.5",
     "node-config": "0.0.2",
-    "vcard": "0.0.9"
+    "vcardparser": "^1.0.3"
   }
 }
