wham bam thank you maam

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "knex": "^0.7.6",
     "mysql": "^2.5.5",
     "node-config": "0.0.2",
+    "passport": "^0.2.1",
+    "passport-local": "^1.0.0",
     "underscore": "^1.8.3",
     "vcardparser": "^1.0.3"
   }
