--- a/package.json
+++ b/package.json
@@ -17,12 +17,23 @@
     "knex": "^0.7.6",
     "mysql": "^2.5.5",
     "node-config": "0.0.2",
+    "node-jsx": "^0.13.3",
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
+    "react": "^0.13.3",
     "underscore": "^1.8.3",
     "vcardparser": "^1.0.3"
   },
   "devDependencies": {
-    "grunt-contrib-jst": "^0.6.0"
+    "browserify": "^11.0.1",
+    "gulp": "^3.9.0",
+    "gulp-browserify": "^0.5.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^1.5.2",
+    "gulp-uglify": "^1.2.0",
+    "gulp-watch": "^4.3.4",
+    "reactify": "^1.1.1",
+    "uglify": "^0.1.5"
   }
 }
