--- a/package.json
+++ b/package.json
@@ -26,23 +26,24 @@
   },
   "devDependencies": {
     "browserify": "^11.0.1",
+    "envify": "^3.4.0",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.0.4",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
     "gulp-watch": "^4.3.4",
     "reactify": "^1.1.1",
-    "sassify": "^0.9.1",
-    "uglify": "^0.1.5",
-    "vinyl-source-stream": "^1.1.0"
+    "sassify": "pastachan/sassify",
+    "uglify": "^0.1.5"
   },
   "browserify": {
     "transform": [
       [
-        "sassify",
+        "envify",
         {
-          "auto-inject": true
+          "NODE_ENV": "browserify"
         }
       ],
       [
