--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chequerd",
+  "name": "davyhoy",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -35,7 +35,6 @@
     "gulp-uglify": "^1.2.0",
     "gulp-watch": "^4.3.4",
     "reactify": "^1.1.1",
-    "sassify": "pastachan/sassify",
     "uglify": "^0.1.5"
   },
   "browserify": {
