--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "browserify": "^11.0.1",
+    "devbridge-autocomplete": "^1.2.21",
     "envify": "^3.4.0",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
@@ -35,6 +36,7 @@
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
     "gulp-watch": "^4.3.4",
+    "jquery": "^2.1.4",
     "reactify": "^1.1.1",
     "uglify": "^0.1.5",
     "vinyl-source-stream": "^1.1.0"
