--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "config": "^1.12.0",
     "ejs": "^2.3.1",
     "express": "^4.12.2",
+    "flux": "^2.0.3",
     "http": "0.0.0",
+    "keymirror": "^0.1.1",
     "knex": "^0.7.6",
     "mysql": "^2.5.5",
     "node-config": "0.0.2",
     "node-jsx": "^0.13.3",
+    "object-assign": "^3.0.0",
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
     "react": "^0.13.3",
