--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.12.2",
     "flux": "^2.0.3",
     "http": "0.0.0",
+    "joi": "^6.6.1",
     "keymirror": "^0.1.1",
     "knex": "^0.7.6",
     "mysql": "^2.5.5",
