--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "davyhoy",
+  "name": "davyapp",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,13 +10,13 @@
     "body-parser": "^1.12.0",
     "bookshelf": "^0.7.9",
     "chalk": "^1.0.0",
+    "classnames": "^2.1.3",
     "config": "^1.12.0",
     "ejs": "^2.3.1",
     "express": "^4.12.2",
     "flux": "^2.0.3",
     "http": "0.0.0",
     "joi": "^6.6.1",
-    "keymirror": "^0.1.1",
     "knex": "^0.7.6",
     "mysql": "^2.5.5",
     "node-config": "0.0.2",
