--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "http": "0.0.0",
     "joi": "^6.6.1",
     "knex": "^0.7.6",
+    "moment": "^2.10.6",
     "mysql": "^2.5.5",
     "node-config": "0.0.2",
     "node-jsx": "^0.13.3",
