prelim support for dropping

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "knex": "^0.7.6",
     "moment": "^2.10.6",
     "mysql": "^2.5.5",
+    "node-babel": "^0.1.2",
     "node-config": "0.0.2",
     "node-jsx": "^0.13.3",
     "object-assign": "^3.0.0",
