--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "config": "^1.12.0",
     "ejs": "^2.3.1",
     "express": "^4.12.2",
+    "express-validator": "^2.14.2",
     "flux": "^2.0.3",
     "http": "0.0.0",
+    "install": "^0.1.8",
     "joi": "^6.6.1",
     "knex": "^0.7.6",
     "moment": "^2.10.6",
@@ -23,8 +25,9 @@
     "node-babel": "^0.1.2",
     "node-config": "0.0.2",
     "node-jsx": "^0.13.3",
+    "npm": "^2.13.4",
     "object-assign": "^3.0.0",
-    "passport": "^0.2.1",
+    "passport": "^0.2.2",
     "passport-local": "^1.0.0",
     "pluralize": "^1.1.4",
     "react": "^0.13.3",
