--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "bookshelf": "^0.7.9",
     "chalk": "^1.0.0",
     "classnames": "^2.1.3",
-    "config": "^1.12.0",
+    "connect-session-knex": "^1.0.14",
     "ejs": "^2.3.1",
     "express": "^4.12.2",
+    "express-session": "^1.11.3",
     "express-validator": "^2.14.2",
     "flux": "^2.0.3",
     "http": "0.0.0",
@@ -24,8 +25,9 @@
     "moment": "^2.10.6",
     "mysql": "^2.5.5",
     "node-babel": "^0.1.2",
-    "node-config": "0.0.2",
     "node-jsx": "^0.13.3",
+    "nodemailer": "^1.4.0",
+    "nodemailer-ses-transport": "^1.3.0",
     "npm": "^2.13.4",
     "object-assign": "^3.0.0",
     "passport": "^0.2.2",
