--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "start": "node server"
   },
   "dependencies": {
-    "async": "^0.9.0",
+    "async": "^1.4.2",
     "bcrypt": "^0.8.5",
     "body-parser": "^1.12.0",
     "bookshelf": "^0.7.9",
     "chalk": "^1.0.0",
     "classnames": "^2.1.3",
     "connect-session-knex": "^1.0.14",
+    "cookie-parser": "^1.3.5",
     "ejs": "^2.3.1",
     "express": "^4.12.2",
     "express-session": "^1.11.3",
@@ -28,7 +29,7 @@
     "node-jsx": "^0.13.3",
     "nodemailer": "^1.4.0",
     "nodemailer-ses-transport": "^1.3.0",
-    "npm": "^2.13.4",
+    "npm": "^2.14.0",
     "object-assign": "^3.0.0",
     "passport": "^0.2.2",
     "passport-local": "^1.0.0",
@@ -53,6 +54,7 @@
     "gulp-uglify": "^1.2.0",
     "gulp-watch": "^4.3.4",
     "jquery": "^2.1.4",
+    "jquery.cookie": "^1.4.1",
     "reactify": "^1.1.1",
     "uglify": "^0.1.5",
     "vinyl-source-stream": "^1.1.0"
