--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "async": "^1.4.2",
+    "aws-sdk": "^2.1.50",
     "bcrypt": "^0.8.5",
     "body-parser": "^1.12.0",
     "bookshelf": "^0.7.9",
@@ -31,11 +32,14 @@
     "nodemailer-ses-transport": "^1.3.0",
     "npm": "^2.14.0",
     "object-assign": "^3.0.0",
+    "pageres": "^2.1.0",
     "passport": "^0.2.2",
     "passport-local": "^1.0.0",
     "pluralize": "^1.1.4",
     "randomstring": "^1.0.7",
     "react": "^0.13.3",
+    "react-slider": "^0.5.1",
+    "request": "^2.61.0",
     "underscore": "^1.8.3",
     "vcardparser": "^1.0.3",
     "velocity-animate": "^1.2.2"
